-
Bug
-
Resolution: Done
-
P2: Important
-
5.1.1
-
None
-
f86ffab4023dbba092c7abdf00242f17428d86f5
In QAccessibleTitleBar::parent() you are creating a new QDockWidgetAccessible. This causes an assert to be hit if you use any spy program with a dockwidget I was able to repro this with your own examples that use QDockWidget.
The fix seems to be to change the code to the following:
QAccessibleInterface *QAccessibleTitleBar::parent() const
{
return QAccessible::queryAccessibleInterface(dockWidget());
}
For Gerrit Dashboard: QTBUG-33946 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
67327,4 | Accessibility: simplify dockwidget accessible | stable | qt/qtbase | Status: MERGED | +2 | 0 |